[gd_scene load_steps=6 format=3 uid="uid://mvk2ri7o77d0"]

[ext_resource type="Script" uid="uid://c0gpff7fkeoo8" path="res://simple_projectile.gd" id="1_fp4i5"]
[ext_resource type="Texture2D" uid="uid://c6goqw1al4bow" path="res://assets/sprites/projectiles/arrow.png" id="2_ere18"]
[ext_resource type="Script" uid="uid://p8h3fxevo1ct" path="res://scripts/hitbox.gd" id="3_7cjxl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_16xel"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pwxqx"]
radius = 2.0

[node name="SimpleProjectile" type="Node2D"]
script = ExtResource("1_fp4i5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
scale = Vector2(0.05, 0.1)
texture = ExtResource("2_ere18")

[node name="ProjectileHitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
monitoring = false
script = ExtResource("3_7cjxl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileHitbox"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_16xel")
debug_color = Color(1, 0, 0.0588235, 0.419608)

[node name="ProjectileImpactDetector" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileImpactDetector"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_pwxqx")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
